--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@quasar/extras": "^1.16.9",
     "js-md5": "^0.8.3",
     "pinia": "^2.1.7",
+    "quasar": "^2.15.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@quasar/vite-plugin": "^1.6.0",
     "@vitejs/plugin-vue": "^5.0.4",
+    "sass": "^1.33.0",
     "vite": "^5.2.0"
   }
 }
