--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.16.9",
+    "axios": "^1.6.8",
     "js-md5": "^0.8.3",
     "pinia": "^2.1.7",
     "quasar": "^2.15.1",
